# LLM-Knowledge-Bases

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml
.opencode/: SETUP.md  package.json
.opencode/plugins/: llm-wiki.ts
sample-mds/: academic-historian.md  finance-finacial-analyst.md  sale-coach.md
src/: main.py  requirements.txt
src/llm_wiki/: __init__.py  cli.py  config.py  indexer.py  llm.py  models.py  operations.py  state.py  storage.py
src/llm_wiki/pipeline/: compile.py  importer.py  ingest.py  lint.py  memory.py
tests/: test_advanced_features.py  test_e2e_workflow.py  test_folder_restructure.py  test_incremental_build.py  test_query_config.py
tests/test-query-kb/_meta/: state.db
tests/test-query-kb/wiki/: index.md  log.md
tests/test-restructure-kb/: dummy.md  dummy_dup_2.md
tests/test-restructure-kb/_meta/: state.db
tests/test-restructure-kb/wiki/: index.md  log.md
tests/test-restructure-kb/wiki/concepts/: Content Redundancy.md  Dummy Content.md  Duplicate Content.md  Information Management.md  Test Note.md
tests/test-restructure-kb/wiki/connections/: Connection Dummy Content and Content Redundancy.md  Connection Duplicate Content and Content Redundancy.md  Connection Duplicate Content and Dummy Content.md  Connection Duplicate Content and Information Management.md  Connection Placeholder Text and Test Note.md  Connection Redundancy and Information Management.md  Connection Test Note and Information Management.md
tests/test-restructure-kb/wiki/sources/: dummy.md  dummy_dup.md
(+3 files in other folders)
